# RT3DGE-Encoding

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  install_cmake.bat  install_cmake.sh  install_vcpkg.bat  install_vcpkg.sh  path.bat  path.sh  release.bat  release.sh  vcpkg.json
include/: RT3DGE_Encoding.h  RT3DGE_Encoding.hpp
src/: main.cpp  test.cpp
